Bug 714090 - Partially downloaded message should not be considered a duplicate message. r=dbienvenu